welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:6: error: not enough arguments for method setCouleurBrosse: (x$1: java.awt.Color)Unit.
Unspecified value parameter x$1.
setCouleurBrosse();avance();baisseBrosse();leveBrosse();avance();gauche();avance();baisseBrosse();
                ^